test/files/neg/t3653.scala
class B {
   def x(i: Int) = 3
   def x(implicit x: Int) = 5
}