test/files/neg/t3653.check
t3653.scala:3: error: double definition:
def x(i: Int): Int at line 2 and
def x(implicit x: Int): Int at line 3
have same type after erasure: (i: Int)Int
   def x(implicit x: Int) = 5
       ^
one error found
